plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'com.litclub'
version = '0.0.1'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

javafx {
    version = "24.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

dependencies {
    implementation('com.google.code.gson:gson:2.8.9')
    implementation("com.fasterxml.jackson.core:jackson-databind:2.20.1")
    implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.1')
    implementation('com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.20.1')
    implementation('org.json:json:20250517')
}

application {
    mainClass = 'com.litclub.Launcher'
    applicationDefaultJvmArgs = [
        '--enable-native-access=javafx.graphics,javafx.web,javafx.media'
    ]
}
